Updated Smart Contact Manager login

--- a/smartcontactmanager/src/main/resources/templates/base.html
+++ b/smartcontactmanager/src/main/resources/templates/base.html
@@ -25,7 +25,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+  <ul class="navbar-nav flex-row mb-2 mb-lg-0">
+  
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">HOME</a>
         </li>
@@ -37,7 +38,7 @@
           <a class="nav-link "  th:href="@{/signin}"aria-disabled="true">LOGIN</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link "  th:href="@{/signin?logout}"aria-disabled="true">LOGOUT</a>
+           <a class="nav-link "  th:href="@{/logout}"aria-disabled="true">LOGOUT</a>
         </li>
         
          <li class="nav-item">
