--- a/smartcontactmanager/src/main/resources/templates/normal/profile.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/profile.html
@@ -14,7 +14,7 @@
   <div class="card-body">
   
   <div class="container text-center">
-  <img src="" style="height:200px; width:200px;" class="my_profile_picture" th:src="@{'/IMAGE/'+${user.imageUrl}}" alt="profile photo"/>
+  <img src="/IMAGE/admin.png" style="height:200px; width:200px;" class="my_profile_picture"  alt="profile photo"/>
   </div>
   <h1 class="text-center mt-3" th:text="${user.name}"></h1>
   
