--- a/smartcontactmanager/src/main/resources/templates/base.html
+++ b/smartcontactmanager/src/main/resources/templates/base.html
@@ -1,83 +1,57 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="layout(content)">
 
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.rtl.min.css" integrity="sha384-Xbg45MqvDIk1e563NLpGEulpX6AvL404DP+/iCgW9eFa2BqztiwTexswJo2jLMue" crossorigin="anonymous">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.rtl.min.css" integrity="sha384-Xbg45MqvDIk1e563NLpGEulpX6AvL404DP+/iCgW9eFa2BqztiwTexswJo2jLMue" crossorigin="anonymous">
+  <link rel="stylesheet" th:href="@{/CSS/style.css}" />
 
-     <link rel="stylesheet" th:href="@{/CSS/style.css}" />
+  <title>this is base html</title>
+</head>
 
-    <title>this is base html</title>
-  </head>
-  <body>
-    <!--  this nav bar-->
-  
-  
+<body>
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Smart Contact Manager</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-  <ul class="navbar-nav flex-row mb-2 mb-lg-0">
-  
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">ABOUT</a>
-        </li>
-       
-        <li class="nav-item">
-          <a class="nav-link "  th:href="@{/signin}"aria-disabled="true">LOGIN</a>
-        </li>
-         <li class="nav-item">
-           <a class="nav-link "  th:href="@{/logout}"aria-disabled="true">LOGOUT</a>
-        </li>
-        
-         <li class="nav-item">
-          <a class="nav-link " th:href="@{/signup}" aria-disabled="true">SIGNUP</a>
-        </li>
-      </ul>
-     
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Smart Contact Manager</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav flex-row mb-2 mb-lg-0">
+          <li class="nav-item me-2">
+            <a class="btn btn-outline-light btn-sm" aria-current="page" th:href="@{/}">HOME</a>
+          </li>
+          <li class="nav-item me-2">
+            <a class="btn btn-outline-light btn-sm" th:href="@{/about}">ABOUT</a>
+          </li>
+          <li class="nav-item me-2">
+            <a class="btn btn-primary btn-sm text-white" th:href="@{/signin}">LOGIN</a>
+          </li>
+          <li class="nav-item me-2">
+            <a class="btn btn-success btn-sm text-white" th:href="@{/signup}">SIGNUP</a>
+          </li>
+          <li class="nav-item me-2">
+            <a class="btn btn-danger btn-sm text-white" th:href="@{/logout}">LOGOUT</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-    <!-- end of the nav bar -->
-    
-    
-    
-    <!--  its for tittle-->
-    
-   <!-- <h1 th:text="${tittle}"></h1> --> 
-    
-    
-   <!-- this replace by -->
-    
-    <div th:replace="${content}">
-    
-    
-    </div>
+  </nav>
+  <!-- End of Navbar -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Content replace -->
+  <div th:replace="${content}"></div>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
-    -->
-    
-    
   <script th:src="@{/JAVASCRIPT/script.js}"></script>
-   
-  </body>
+</body>
 </html>
